##Text encoding: utf-8

2012-07-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: remove old gconf related code.
	* gnumeric/functions.cc: call gcu::Element::Init().
	* goffice/gchemutils.cc: ditto.
	* libs/gcu/element.cc: add Greek language.
	* mozilla-plugin/chem-viewer.cc: call gcu::Element::Init().

2012-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/C/table/C/gchemtable.xml: updated user doc for 0.14.

2012-07-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.13.92).
	* docs/help/C/calc/C/figures/*: updated screenshots.
	* libs/gcp/application.cc: fixed a misleading error message.
	* libs/gcp/view.cc: fix View::BuildSVG() and View::BuildEPS() which were
	missing the trailing 0.

2012-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/C/3d/C/gchem3d.xml: updated user doc for 0.14.
	* libs/gcp/window.cc: force a message box to be modal.
	* libs/gcugtk/message.cc: make the message box modal when Run() is called.

2012-07-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.13.91).
	* libs/gcp/application.cc: fixed theme issues in toolbox.
	* libs/gcp/window.cc: fix menu item label.
	* libs/gcu/atom.cc: fix crasher on exit.
	* libs/gcu/bond.cc: ditto.
	* libs/gcu/element.cc: fix localization.
	* libs/gcu/element.h: ditto.
	* libs/gcugtk/chem3dapplication.cc: always show the tools menu items when
	a molecule has been loaded.
	* libs/gcugtk/chem3dwindow.cc: fix menu item label.
	* programs/3d/main.cc: fix localization.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/main.cc: ditto.
	* programs/paint/main.cc: ditto.
	* programs/spectra/Makefile.am: ditto.
	* programs/spectra/gspectrum.cc: ditto.

2012-07-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: fixed radius changes behavior.

2012-07-08  Jean Bréfort  <jean.brefort@normalesup.org>