@@ -22,7 +22,7 @@
   <bookinfo> 
 	 <title>&app; Manual V&manrevision;</title>
 	 <copyright> 
-       <year>2006-2010</year>
+       <year>2006-2012</year>
        <holder>Jean Br&#233;fort</holder>
      </copyright>
 
